--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.23.0",
     "firebase": "^8.8.1",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-date-object": "^2.1.2",
     "react-dom": "^17.0.2",
